# poor3d

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  poor3d.bat
include/: camera.h  coolmath.h  mesh.h  panic.h  vec3.h
src/: camera.c  main.c  mesh.c  panic.c  vec3.c
